add roles/common/tasks/setup-sysctl.yml site.yml

--- a/roles/common/tasks/setup-sysctl.yml
+++ b/roles/common/tasks/setup-sysctl.yml
@@ -12,6 +12,5 @@
     shell       : /sbin/sysctl -p
     register    : result
     changed_when: False
-
-  - name: ステータス
+  - name: sysctl -p ステータス
     debug      : var=result.rc
