--- a/site.yml
+++ b/site.yml
@@ -9,4 +9,5 @@
   tasks:
     - import_tasks: roles/common/tasks/setup-network.yml
     - import_tasks: roles/common/tasks/setup-sysctl.yml
+    - import_tasks: roles/common/tasks/setup-limits.yml
 
