--- a/site.yml
+++ b/site.yml
@@ -16,3 +16,4 @@
     - import_tasks: roles/common/tasks/add-oracle.yml
     - import_tasks: roles/common/tasks/setup-selinux.yml
     - import_tasks: roles/common/tasks/setup-hosts.yml
+    - import_tasks: roles/common/tasks/setup-chrony.yml
