--- a/site.yml
+++ b/site.yml
@@ -4,17 +4,21 @@
 
   become: yes
   vars_files:
-    - roles/common/group_vars/all.yml
+    - roles/common/group_vars/all
+    - roles/common/host_vars/{{ ansible_hostname }}
 
   tasks:
-    - import_tasks: roles/common/tasks/setup-network.yml
-    - import_tasks: roles/common/tasks/setup-sysctl.yml
-    - import_tasks: roles/common/tasks/setup-limits.yml
-    - import_tasks: roles/common/tasks/install-rpms-00.yml
-    - import_tasks: roles/common/tasks/install-rpms-01.yml
-    - import_tasks: roles/common/tasks/add-group.yml
-    - import_tasks: roles/common/tasks/add-oracle.yml
-    - import_tasks: roles/common/tasks/setup-selinux.yml
-    - import_tasks: roles/common/tasks/setup-hosts.yml
-    - import_tasks: roles/common/tasks/setup-chrony.yml
-    - import_tasks: roles/common/tasks/setup-firewalld.yml
+#    - import_tasks: roles/common/tasks/setup-network.yml
+#    - import_tasks: roles/common/tasks/setup-sysctl.yml
+#    - import_tasks: roles/common/tasks/setup-limits.yml
+#    - import_tasks: roles/common/tasks/install-rpms-00.yml
+#    - import_tasks: roles/common/tasks/install-rpms-01.yml
+#    - import_tasks: roles/common/tasks/add-group.yml
+#    - import_tasks: roles/common/tasks/add-oracle.yml
+#    - import_tasks: roles/common/tasks/setup-selinux.yml
+#    - import_tasks: roles/common/tasks/setup-hosts.yml
+#    - import_tasks: roles/common/tasks/setup-chrony.yml
+#    - import_tasks: roles/common/tasks/setup-firewalld.yml
+#    - import_tasks: roles/common/tasks/make-base.yml
+    - import_tasks: roles/common/tasks/setup-bash_profile.yml
+    - import_tasks: roles/common/tasks/setup-env.yml
